Disable verbosity on library generation (cspice and csupport) Less screen clutter on regeneration (and faster, slightly)

--- a/src/cspice/Makefile
+++ b/src/cspice/Makefile
@@ -23,7 +23,7 @@ $(ODIR)/%.o: %.c $(DEPS)
 
 $(LDIR)/$(LIB_NAME).a: $(OBJ)
 	@mkdir -p $(LDIR) || true
-	ar crv $@ $(OBJ)
+	ar cr $@ $(OBJ)
 	ranlib $@
 
 .PHONY: clean all
